# FinalYearProject

./: README.md  results.xlsx
Report & presentation/: Presentation.pptx
Wireshark Captures/: CURL_req_ESP32_http1.0.pcapng  CURL_req_ESP32_http1.1.pcapng  CURL_req_ESP32_https1.0.pcapng  CURL_req_ESP32_https1.1.pcapng  ESP32_UDP_NETCAT_both_ways.pcapng  ESP32_UDP_fake_addr.pcapng  ESP32_req_Apache_http1.1_http1.0.pcapng  ESP32_req_Apache_https_1.0_https1.1.pcapng  ESP32_req_ESP_http1.0_http1.1.pcapng  ESP32_req_ESP_https1.0_https1.1.pcapng  ESP32_req_nginx_http1.0_http1.1.pcapng  ESP32_req_nginx_https1.1_https1.0.pcapng  ESP32x2_UDP_real_addr.pcapng
Wireshark Captures/stress testing/UDP/: ESP_sendTo_Ncat_100KB_outOfMem.pcapng  ESP_sendTo_Ncat_10KB.pcapng  ESP_sendTo_Ncat_1KB.pcapng  (+12 more)
http_file_serving/: sdkconfig  sdkconfig.old
http_file_serving/main/: file_server.c  main.c
http_request/: CMakeLists.txt  sdkconfig  sdkconfig.old
http_request/main/: http_request_example_main.c
https_file_serving/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
https_file_serving/main/: CMakeLists.txt  component.mk  file_server.c  main.c
https_mbedtls/: sdkconfig  sdkconfig.old
https_mbedtls/main/: https_mbedtls_example_main.c
https_request/: sdkconfig  sdkconfig.old
https_request/main/: https_request_example_main.c
https_server/: esp_workspace.code-workspace  sdkconfig  sdkconfig.old
https_server/main/: main.c
udp_client/: sdkconfig  sdkconfig.old
udp_client/main/: Kconfig.projbuild  udp_client.c
udp_server/: sdkconfig
udp_server/main/: udp_server.c
(+30 files in other folders)
